RESOLVED FIXED12705
REGRESSION: Crash with user stylesheet set
https://bugs.webkit.org/show_bug.cgi?id=12705
Summary REGRESSION: Crash with user stylesheet set
Kevin M. Dean
Reported 2007-02-08 18:01:06 PST
crashes on initial load of nightly page
Attachments
Crash log (55.26 KB, text/plain)
2007-02-08 18:01 PST, Kevin M. Dean
no flags
Patch (4.18 KB, patch)
2007-02-09 00:40 PST, Mark Rowe (bdash)
mjs: review+
Updated patch (4.50 KB, patch)
2007-02-09 00:55 PST, Mark Rowe (bdash)
mjs: review+
Kevin M. Dean
Comment 1 2007-02-08 18:01:35 PST
Created attachment 13075 [details] Crash log
Matt Lilek
Comment 2 2007-02-08 18:09:54 PST
Confirmed with r19510 debug build. Crashes when setting a stylesheet in the preferences as well.
Mark Rowe (bdash)
Comment 3 2007-02-08 18:35:00 PST
This is in radar as <rdar://problem/4986213> REGRESSION: Crash on page load when using user stylesheet. The contents of the user stylesheet do not matter (I tested with an empty file), and the crash does not occur when loading file:/// URLs.
Mark Rowe (bdash)
Comment 4 2007-02-09 00:40:40 PST
Maciej Stachowiak
Comment 5 2007-02-09 00:43:50 PST
Comment on attachment 13080 [details] Patch I would have made a special requestUserStyleSheet call w/ maybe a common method with the bool as private, but seems ok this way too r=me either way
Mark Rowe (bdash)
Comment 6 2007-02-09 00:55:25 PST
Created attachment 13081 [details] Updated patch Use a new requestUserCSSStyleSheet method rather than a mysterious boolean.
Maciej Stachowiak
Comment 7 2007-02-09 00:58:02 PST
Comment on attachment 13081 [details] Updated patch r=me
Mark Rowe (bdash)
Comment 8 2007-02-09 01:00:59 PST
Fixed in r19524.
Kevin M. Dean
Comment 9 2007-02-12 18:17:28 PST
Crashing is back with r19583
Kevin M. Dean
Comment 10 2007-02-12 21:01:51 PST
r19593 is now working again
Note You need to log in before you can comment on or make changes to this bug.